added crina general layout

--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -20,7 +20,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 ro:
-  welcome: "Bine ai venit pe ROCK this HAIR: contact@rockthishair.ro sau +4(0)748.488.123"
+  welcome: "Cabinet individual de psihologie Nedelcu Maria Cristina: office@crinanedelcu.ro sau +4(0)723.070.844"
   follow:
     title: "Urmareste-ne"
     body: "Urmareste-ne, intra in conversatie, fa o programare!"
