modificat adresa in welcome internatinalization text

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,7 +20,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  welcome: "Psychology Clinic Nedelcu Maria Cristina: office@crinanedelcu.ro or +4(0)723.070.844"
+  welcome: "NEW ADDRESS:Elena Cuza St. No.10 sect.4 - Psychology Clinic Nedelcu Maria Cristina: office@crinanedelcu.ro or +4(0)723.070.844"
   follow:
     title: "Follow us"
     body: "Follow us, join the conversation, make an appointement!"
